[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://resources/BaseTileMap.tres" type="TileSet" id=3]
[ext_resource path="res://assets/hero/Terrain/Grassland/Sky_color.png" type="Texture" id=4]
[ext_resource path="res://assets/hero/Terrain/Grassland/Cloud_cover_1.png" type="Texture" id=5]
[ext_resource path="res://assets/hero/Terrain/Grassland/Foreground_scenery.png" type="Texture" id=6]
[ext_resource path="res://assets/hero/Terrain/Grassland/Hills.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=7]
Button/colors/font_color_focus = Color( 0.968627, 0.823529, 0.0352941, 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="background" type="Node2D" parent="."]

[node name="sky" type="Sprite" parent="background"]
position = Vector2( 159, 88 )
texture = ExtResource( 4 )

[node name="Hills" type="Sprite" parent="background"]
position = Vector2( 159, 41 )
texture = ExtResource( 7 )

[node name="forest" type="Sprite" parent="background"]
position = Vector2( 159, 56 )
texture = ExtResource( 6 )

[node name="clouds" type="Sprite" parent="background"]
position = Vector2( 160, 69 )
texture = ExtResource( 5 )

[node name="background_opacity" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.623529 )

[node name="tile_map" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 23, 0, 1, 24, 0, 2, 24, 0, 3, 24, 0, 4, 24, 0, 5, 24, 0, 6, 24, 0, 7, 24, 0, 8, 24, 0, 9, 24, 0, 10, 24, 0, 11, 24, 0, 12, 24, 0, 13, 24, 0, 14, 24, 0, 15, 24, 0, 16, 24, 0, 17, 24, 0, 18, 24, 0, 19, 23, 0, 65536, 20, 0, 65555, 18, 0, 131072, 20, 0, 131091, 18, 0, 196608, 20, 0, 196627, 18, 0, 262144, 20, 0, 262163, 18, 0, 327680, 20, 0, 327696, 0, 0, 327697, 1, 0, 327698, 2, 0, 327699, 18, 0, 393216, 20, 0, 393217, 0, 0, 393218, 2, 0, 393232, 71, 0, 393233, 71, 0, 393234, 71, 0, 393235, 18, 0, 458752, 20, 0, 458753, 71, 0, 458754, 71, 0, 458768, 71, 0, 458769, 71, 0, 458770, 71, 0, 458771, 18, 0, 524288, 20, 0, 524289, 0, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 2, 0, 524307, 18, 0, 589824, 20, 0, 589825, 5, 0, 589826, 6, 0, 589827, 6, 0, 589828, 6, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 6, 0, 589834, 6, 0, 589835, 6, 0, 589836, 6, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0, 589840, 6, 0, 589841, 6, 0, 589842, 7, 0, 589843, 18, 0, 655360, 20, 0, 655361, 30, 0, 655362, 11, 0, 655363, 11, 0, 655364, 11, 0, 655365, 11, 0, 655366, 11, 0, 655367, 11, 0, 655368, 11, 0, 655369, 11, 0, 655370, 11, 0, 655371, 11, 0, 655372, 11, 0, 655373, 11, 0, 655374, 11, 0, 655375, 11, 0, 655376, 11, 0, 655377, 11, 0, 655378, 30, 0, 655379, 18, 0, 720896, 15, 0, 720897, 14, 0, 720898, 14, 0, 720899, 14, 0, 720900, 14, 0, 720901, 14, 0, 720902, 14, 0, 720903, 14, 0, 720904, 14, 0, 720905, 14, 0, 720906, 14, 0, 720907, 14, 0, 720908, 14, 0, 720909, 14, 0, 720910, 14, 0, 720911, 14, 0, 720912, 14, 0, 720913, 14, 0, 720914, 14, 0, 720915, 15, 0 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -34.0
margin_right = 80.0
margin_bottom = 34.0

[node name="start_button" type="Button" parent="controls"]
margin_right = 160.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../quit_button")
theme = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0.823529, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0.988235, 0.415686, 0.0352941, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="controls_button" type="Button" parent="controls"]
margin_top = 24.0
margin_right = 160.0
margin_bottom = 44.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0.823529, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0.988235, 0.415686, 0.0352941, 1 )
custom_fonts/font = SubResource( 1 )
text = "Controls"

[node name="quit_button" type="Button" parent="controls"]
margin_top = 48.0
margin_right = 160.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../start_button")
theme = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0.823529, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0.988235, 0.415686, 0.0352941, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"

[connection signal="pressed" from="controls/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="controls/controls_button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="controls/quit_button" to="." method="_on_quit_button_pressed"]
